--- a/typscipt finle lesson/ts/public/index.html
+++ b/typscipt finle lesson/ts/public/index.html
@@ -126,7 +126,7 @@
       </div>
     </main>
     <footer class="border-top pt-3 bg-dark center">
-      <p class="text-light">Created by David Yakin &copy;</p>
+      <p class="text-light">Created by koren alt &copy;</p>
     </footer>
   </body>
 </html>
